--- a/resources/php.twig
+++ b/resources/php.twig
@@ -1,29 +1,29 @@
 <?php
 
-use Cinch\MigrationStore\Script\Committable;
-use Cinch\MigrationStore\Script\Revertable;
+use Cinch\MigrationStore\Script\CanMigrate;
+use Cinch\MigrationStore\Script\CanRollback;
 use Cinch\MigrationStore\Script\Script;
 use Cinch\Common\Author;
-use Cinch\Common\CommitPolicy;
+use Cinch\Common\MigratePolicy;
 use Cinch\Common\Description;
 use Cinch\Database\Session;
 
-return new class extends Script implements Committable, Revertable {
+return new class extends Script implements CanMigrate, CanRollback {
     public function __construct()
     {
         parent::__construct(
-            CommitPolicy::from('{{ commit_colicy }}'),
+            MigratePolicy::from('{{ migrate_policy }}'),
             new Author('{{ author }}'),
             new DateTimeImmutable('{{ authored_at }}'),
             new Description('{{ description }}')
         );
     }}
 
-    public function commit(Session $session): void
+    public function migrate(Session $session): void
     {
     }
 
-    public function revert(Session $session): void
+    public function rollback(Session $session): void
     {
     }
 };
