--- a/resources/sql.twig
+++ b/resources/sql.twig
@@ -2,11 +2,11 @@
  * @author {{ author }}
  * @authored_at {{ authored_at }}
  * @description {{ description }}
- * @commit_policy {{ commit_policy }}
+ * @migrate_policy {{ migrate_policy }}
  */
 
--- @commit
+-- @migrate
 
 
--- @revert
+-- @rollback
 
