removed migration factory

--- a/resources/env-list.twig
+++ b/resources/env-list.twig
@@ -1,7 +1,7 @@
 {% for name, env in environments %}
 {{ name ~ (name == default ? ' (default)' : '') }}
   deploy_lock_timeout {{ env.deployLockTimeout }}
-  target '{{ env.target }}'
-  history '{{ env.history }}'
+  target '{{ env.targetDsn }}'
+  history '{{ env.historyDsn }}'
     - schema '{{ env.schema }}', table_prefix '{{ env.tablePrefix }}', auto_create_schema {{ env.autoCreateSchema ? 'true' : 'false' }}
 {% endfor %}
