--- a/resources/sql.twig
+++ b/resources/sql.twig
@@ -3,6 +3,9 @@
  * @authored_at {{ authored_at }}
  * @description {{ description }}
  * @migrate_policy {{ migrate_policy }}
+{% for name in labels %}
+ * @label {{ name }}
+{% endfor %}
  */
 
 -- @migrate
