removed unneeded import and add unescaped slashes to labels json

--- a/resources/php.twig
+++ b/resources/php.twig
@@ -6,7 +6,6 @@ use Cinch\Common\Description;
 use Cinch\Common\Labels;
 use Cinch\Database\Session;
 use Cinch\MigrationStore\Script\Script;
-use DateTimeImmutable;
 
 return new class extends Script {
     public function __construct()
@@ -16,7 +15,7 @@ return new class extends Script {
             new Author('{{ author }}'),
             new DateTimeImmutable('{{ authored_at }}'),
             new Description('{{ description }}'),
-            new Labels({{ labels|json_encode() }})
+            new Labels({{ labels|json_encode(constant('JSON_UNESCAPED_SLASHES')) }})
         );
     }}
 
