renamed migrate/rollback parameter to target

--- a/resources/php.twig
+++ b/resources/php.twig
@@ -19,11 +19,11 @@ return new class extends Script {
         );
     }
 
-    public function migrate(Session $session): void
+    public function migrate(Session $target): void
     {
     }
 
-    public function rollback(Session $session): void
+    public function rollback(Session $target): void
     {
     }
 };
